refactor(httpstatus): use pattern matching